Specify iex-derive version in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 
 [dependencies]
 fix-hidden-lifetime-bug = "0.2.6"
-iex-derive = { path = "iex-derive" }
+iex-derive = { path = "iex-derive", version = "0.1.0" }
 typeid = "1.0.0"
