--- a/iex-derive/Cargo.toml
+++ b/iex-derive/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "iex-derive"
 version = "0.1.0"
+authors = ["Alisa Sireneva <me@purplesyringa.moe>"]
 edition = "2021"
+description = "Derive macros for #[iex]"
+repository = "https://github.com/iex-rs/iex"
+license = "MIT OR Apache-2.0"
 
 [lib]
 proc-macro = true
