--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,13 @@ keywords = ["ergonomic", "error", "panic"]
 categories = ["rust-patterns"]
 
 [dependencies]
+anyhow = { version = "1", optional = true }
 fix-hidden-lifetime-bug = "0.2.6"
 iex-derive = { path = "iex-derive", version = "0.1.0" }
 typeid = "1.0.0"
 
 [dev-dependencies]
 anyhow = "1"
+
+[features]
+anyhow = ["dep:anyhow"]
