--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,15 @@ typeid = "1.0.0"
 
 [dev-dependencies]
 anyhow = "1"
+criterion = "0.3"
 
 [features]
 anyhow = ["dep:anyhow"]
 
 [package.metadata.docs.rs]
 all-features = true
+
+[[bench]]
+name = "unwind"
+harness = false
+
